--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "shornuk/craft-upload",
-    "description": "Front-end asset upload for user photos, fields, volumes and folders.",
+    "description": "Front-end user photo and asset uploader for Craft CMS",
     "type": "craft-plugin",
     "version": "1.0.7",
     "keywords": [
@@ -9,14 +9,19 @@
         "craftcms",
         "craft-plugin",
         "asset uploader",
-        "front end",
-        "uploadit"
+        "front end"
     ],
     "support": {
         "docs": "https://github.com/shornuk/craft-upload/blob/master/README.md",
         "issues": "https://github.com/shornuk/craft-upload/issues"
     },
     "license": "proprietary",
+    "authors": [
+        {
+            "name": "Shorn",
+            "homepage": "https://shorn.co.uk"
+        }
+    ],
     "require": {
         "craftcms/cms": "^3.0.2"
     },
@@ -28,12 +33,15 @@
     "extra": {
         "name": "Upload",
         "handle": "upload",
+        "developer": "Shorn",
+        "developerUrl": "https://shorn.co.uk",
         "hasCpSettings": false,
         "hasCpSection": false,
         "changelogUrl": "https://raw.githubusercontent.com/shornuk/craft-upload/master/CHANGELOG.md",
         "class": "shornuk\\upload\\Upload",
         "components": {
             "upload": "shornuk\\upload\\services\\UploadService"
-        }
+        },
+        "class": "shornuk\\upload\\Upload"
     }
 }
